--- a/src/css/estilos.css
+++ b/src/css/estilos.css
@@ -123,7 +123,7 @@ body {
     align-items: center;
     text-transform: uppercase;
     transition: all .3s ease-in;
-    border: 0,5px solid black;
+    border: none;
     background-color: #000;
 
 }
