--- a/src/css/fontes.css
+++ b/src/css/fontes.css
@@ -2,3 +2,8 @@
     font-family: "ChaletComprime";
     src: url("../fontes/ChaletComprime.ttf");
 }
+
+@font-face {
+    font-family: "Open Sans";
+    src: url("../fontes/OpenSans-Regular.ttf");
+}
